--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6180,9 +6180,9 @@
     					        </div>
     							<div class="sheet-derivemod"><input type="number" name="attr_StrainThreeMod" title="@{StrainThreeMod}" class="sheet-derivedStat" value="0" /></div>
     							<div class="sheet-derivecurrent">
-    							    <input class="sheet-danger" type="checkbox" name="attr_straindanger" value="1" />
-    								<input class="sheet-critical" type="checkbox" name="attr_straincrit" value="1" />
-    							    <input type="number" name="attr_StrainCur" title="@{StrainCur}" class="sheet-derivedStat sheet-strain" value="0" readonly />
+    							    <input class="sheet-dangerthree" type="checkbox" name="attr_strainthreedanger" value="1" />
+    								<input class="sheet-criticalthree" type="checkbox" name="attr_strainthreecrit" value="1" />
+    							    <input type="number" name="attr_StrainThreeCur" title="@{StrainThreeCur}" class="sheet-derivedStat sheet-strainthree" value="0" readonly />
     							</div>
     							<div class="sheet-derivemisc"><input type="number" name="attr_StrainThree_max" title="@{StrainThree_max}" class="sheet-derivedStat" /></div>
 							</div>
