Reverting strain changes
Strain works the same it's just a stylistic choice of die vs. flat value as base. Die is probably better, so we're keeping just one version of Strain.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -1057,7 +1057,7 @@
                 console.log("<==Setting configuration for Interface Zero 3.0==>");
                 setAttrs({logo: 9,
                           background: 7,
-                          izStrainThree: 'on',
+                          izStrain: 'on',
                           izStreetCredThree: 'on',
                           '50fPo8Clams': 4,
                           increasedfatigue: 1,
@@ -1173,10 +1173,10 @@
 	});
 
 	//Display Derived Stats HR
-	on("change:useacademics change:tdsanity change:potsmfame change:ripreason change:ripstatus change:hfglory change:izfirewall change:dlgrit change:neuraltoughness change:corruption change:izstreetcred change:izstrain change:izstreetcredthree change:izstrainthree", function() {
-	    getAttrs(["useacademics","tdsanity","potsmFame","ripReason","ripStatus","hfGlory","izFirewall","DLGrit","neuraltoughness","Corruption","izStreetCred","izStrain","izStreetCredThree","izStrainTHree"], function(v) {
+	on("change:useacademics change:tdsanity change:potsmfame change:ripreason change:ripstatus change:hfglory change:izfirewall change:dlgrit change:neuraltoughness change:corruption change:izstreetcred change:izstrain change:izstreetcredthree", function() {
+	    getAttrs(["useacademics","tdsanity","potsmFame","ripReason","ripStatus","hfGlory","izFirewall","DLGrit","neuraltoughness","Corruption","izStreetCred","izStrain","izStreetCredThree"], function(v) {
 	        console.log ("**********\nacademics:"+v.useacademics+"\nneuraltoughness:"+v.neuraltoughness+"\nCorruption:"+v.Corruption+"\npotsmFame:"+v.potsmFame+"\nizFirewall:"+v.izFirewall+"\nripReason:"+v.ripReason+"\nDLGrit:"+v.DLGrit+"\nhfGlory:"+v.hfGlory+"\ntdsanity:"+v.tdsanity+"\nripReason:"+v.ripReason+"\nizStrain:"+v.izStrain+"\nizStreetCred:"+v.izStreetCred+"\n**********");
-	        if(v.useacademics == "1" || v.useacademics == 'on' || v.tdsanity == 'on' || v.potsmFame == 'on' || v.ripReason == 'on' || v.ripStatus == 'on' || v.hfGlory == 'on' || v.izFirewall == 'on' || v.DLGrit == 'on' || v.neuraltoughness == 'on' || v.Corruption == 'on' || v.izStreetCred == 'on' || v.izStrain == 'on' || v.izStreetCredThree == 'on' || v.izStrainThree == 'on') {
+	        if(v.useacademics == "1" || v.useacademics == 'on' || v.tdsanity == 'on' || v.potsmFame == 'on' || v.ripReason == 'on' || v.ripStatus == 'on' || v.hfGlory == 'on' || v.izFirewall == 'on' || v.DLGrit == 'on' || v.neuraltoughness == 'on' || v.Corruption == 'on' || v.izStreetCred == 'on' || v.izStrain == 'on' || v.izStreetCredThree == 'on') {
 	            //then one of the custom derived stats is checked so display the <hr> tag
 	            setAttrs({showDerived: 1});
 	        }
@@ -1511,7 +1511,7 @@
 	}
 
 	// Calculate Strain
-	on('change:repeating_augmentation remove:repeating_augmentation change:izstrain change:izstrainthree',function(){
+	on('change:repeating_augmentation remove:repeating_augmentation change:izstrain',function(){
 		calcStrain();
 	});
 
@@ -3188,7 +3188,7 @@
         })
     });
 
-    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred", "izStrainThree","izStreetCredThree"];
+    const derivedstats = ["usecharisma","useacademics","Corruption","potsmFame","izFirewall","hfGlory","DLGrit","neuraltoughness","ripReason","tdsanity","ripStatus","izStrain","izStreetCred","izStreetCredThree"];
     const derivedlabels = ["Charisma","Academics","Corruption","Fame","Firewall","Glory","Grit","Neural Toughness","Reason","Sanity","Status","Strain","Street Cred"];
     const derivedcurfields = ["@{charismaCur}","@{academicsCur}","@{corruptionCur}","@{fameCur}","@{FirewallCur}","@{gloryCur}","@{gritCur}","@{ntoughnesscur}","@{reasonCur}","@{sanityCur}","@{statusCur}","@{StrainCur}","@{StreetCredCur}"];
     const derivedStatBlock = function() {
@@ -6136,7 +6136,7 @@
     					    </div>
     					    <!-- IZ 2.0 Street Cred -->
     					    <input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
-    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree sheet-StrainThree" style='font-weight: bold; font-size: .75em;'>
+    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree" style='font-weight: bold; font-size: .75em;'>
     					        <div class="sheet-derivelabel">&nbsp;</div>
     					        <div class="sheet-derivebase" data-i18n="base">Base</div>
     					        <div class="sheet-derivemod" data-i18n="mod">Mod</div>
@@ -6150,7 +6150,7 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_StreetCredCur" title="@{StreetCredCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc"><input type="number" name="attr_maxStreetCredCur" title="@{maxStreetCredCur}" class="sheet-derivedStat" value="10" /></div>
     					    </div>
-    					    <!-- IZ 2.0 Strain -->
+    					    <!-- IZ 2.0 and 3.0 Strain -->
     					    <input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" />
     					    <div class="sheet-basederived sheet-Strain">
     					        <div class="sheet-derivelabel" data-i18n="strain">Strain</div>
@@ -6170,21 +6170,6 @@
     							    <input type="number" name="attr_StrainCur" title="@{StrainCur}" class="sheet-derivedStat sheet-strain" value="0" readonly />
     							</div>
     							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_Strain_max" title="@{Strain_max}" /></div>
-							</div>
-							<!-- IZ 3.0 Strain -->
-							<input type="checkbox" class="sheet-useStrainThree" style="width: 15px; display: none;" name="attr_izStrainThree" />
-    					    <div class="sheet-basederived sheet-StrainThree">
-								<div class="sheet-derivelabel" data-i18n="strain">Strain</div>
-								<div class="sheet-derivebase">
-    					            <input type="number" name="attr_StrainThree" title="@{strainthree}">
-    					        </div>
-    							<div class="sheet-derivemod"><input type="number" name="attr_StrainThreeMod" title="@{StrainThreeMod}" class="sheet-derivedStat" value="0" /></div>
-    							<div class="sheet-derivecurrent">
-    							    <input class="sheet-dangerthree" type="checkbox" name="attr_strainthreedanger" value="1" />
-    								<input class="sheet-criticalthree" type="checkbox" name="attr_strainthreecrit" value="1" />
-    							    <input type="number" name="attr_StrainThreeCur" title="@{StrainThreeCur}" class="sheet-derivedStat sheet-strainthree" value="0" readonly />
-    							</div>
-    							<div class="sheet-derivemisc"><input type="number" name="attr_StrainThree_max" title="@{StrainThree_max}" class="sheet-derivedStat" /></div>
 							</div>
 							<!-- IZ 3.0 Street Cred-->
 							<input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
@@ -8312,7 +8297,6 @@
     			        <!--Status--><label class="sheet-dsItem" data-i18n-title="status-text" title="A reflection of ones position in society, and the esteem with which others regard the hero. This is used in Rippers."><input type="checkbox" class="sheet-useStatus" name="attr_ripStatus" style="width: 15px;" /><span data-i18n="status">Status</span></label>
     			        <!--Strain IZ 2.0--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
 						<!--Street Cred IZ 2.0--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
-						<!--Strain IZ 3.0--><label class="sheet-dsItem" data-i18n-title="strain-three-text" title="Used to measure how much strain a character is under due to augmentation from bioware, with the base equal to your vigor die. This field is for Interface Zero 3.0, where Strain is a flat value"><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrainThree" /><span data-i18n="strain">Strain</span></label>
     			        <!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
     			    </div>
     			</div>
