--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6172,7 +6172,7 @@
     							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_Strain_max" title="@{Strain_max}" /></div>
 							</div>
 							<!-- IZ 3.0 Street Cred-->
-							<input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
+							<input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
 							<div class="sheet-basederived sheet-StreetCredThree">
     					        <div class="sheet-derivelabel" data-i18n="street-cred">Street Cred</div>
     					        <div class="sheet-derivebase">
