--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6136,7 +6136,7 @@
     					    </div>
     					    <!-- IZ 2.0 Street Cred -->
     					    <input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
-    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree" style='font-weight: bold; font-size: .75em;'>
+    					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree" style='font-weight: bold; font-size: .75em;'> <!-- Strain and Street Cred header field -->
     					        <div class="sheet-derivelabel">&nbsp;</div>
     					        <div class="sheet-derivebase" data-i18n="base">Base</div>
     					        <div class="sheet-derivemod" data-i18n="mod">Mod</div>
