--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -8394,7 +8394,7 @@
                             <input type='text' class='sheet-ModDesc' name='attr_wealthwilddieinfo' placeholder='Wealth Wild Die die type' data-i18n-placeholder="wealth-wild-die-type" />
                         </div>
 						<label class="sheet-srmItem sheet-usewealthmod"><input type="checkbox" name="attr_useWealthMod" value="1" /> <span data-i18n="use-wealth-modifier-field">Use the Wealth Modifier field</span></label>
-						<label class="sheet-srmItem" data-i18n-title="smooth-dice"><input type="checkbox" name="attr_smoothDice" value=1>&nbsp;<span data--i18n="smooth-dice">Smooth Dice</span></label>
+						<label class="sheet-srmItem" data-i18n-title="smooth-dice"><input type="checkbox" name="attr_smooth_dice" value=1>&nbsp;<span data--i18n="smooth-dice">Smooth Dice</span></label>
     			    </div>
     			</div>
     			<!--<input class='sheet-sbButtonCheck' type='checkbox' style='display: none;' name='attr_initializeStatblock' />
@@ -8417,6 +8417,7 @@
 					<ul>
 						 <li><strong data-i18n="bug-fixes">Bug Fixes</strong></li>
 						 <ul>
+							 <li data--i18n="310-typos">General typo fixes</li>
 						 </ul>
 						 <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
 						 <ul>
