--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6171,23 +6171,6 @@
     							</div>
     							<div class="sheet-derivemisc"><input class="sheet-derivedStat" type="number" name="attr_Strain_max" title="@{Strain_max}" /></div>
 							</div>
-							<!-- IZ 3.0 Street Cred-->
-							<input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
-							<div class="sheet-basederived sheet-StreetCredThree">
-    					        <div class="sheet-derivelabel" data-i18n="street-cred">Street Cred</div>
-    					        <div class="sheet-derivebase">
-    					            <select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-dtype" value="6">
-    									<option value="4">d4</option>
-    									<option value="6">d6</option>
-    									<option value="8">d8</option>
-    									<option value="10">d10</option>
-    									<option value="12">d12</option>
-    								 </select>
-    					        </div>
-    							<div class="sheet-derivemod"><input type="number" name="attr_StreetCredThreeMod" title="@{StreetCredThreeMod}" class="sheet-derivedStat" value="0" /></div>
-    							<div class="sheet-derivecurrent"><input type="number" name="attr_StreetCredThreeCur" title="@{StreetCredThreeCur}" class="sheet-derivedStat" value="0" readonly /></div>
-    							<div class="sheet-derivemisc"><input type="number" name="attr_StreetCredThree_max" title="@{StreetCredThreeMax}" class="sheet-derivedStat"/></div>
-							</div>
     					</div>
     					<hr class="sheet-mischr" style="border: .45px dashed silver; margin: -4px 0px 8px 0px;"  />
     					<!-- Miscellaneous -->
@@ -6243,7 +6226,24 @@
         						<div class="sheet-swexenc">
         						    <span data-i18n="load-limit-multiplier">Load Limit Multiplier</span>: <input type="number" class="sheet-modifier" name="attr_loadlimitmulitplier" title="@{loadlimitmultiplier}" value="5"/>
         						</div>
-        					</div>
+							</div>
+							<!-- IZ 3.0 Street Cred -->
+							<input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
+							<div class="sheet-basederived sheet-StreetCredThree">
+    					        <div class="sheet-derivelabel" data-i18n="street-cred">Street Cred</div>
+    					        <div class="sheet-derivebase">
+    					            <select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-derivebaseplus" value="d6">
+    									<option value="d4">d4</option>
+    									<option value="d6">d6</option>
+    									<option value="d8">d8</option>
+    									<option value="d10">d10</option>
+										<option value="d12">d12</option>
+										<option value="d12+1">d12+1</option>
+										<option value="d12+2">d12+2</option>
+    								 </select>
+								</div>
+								<input type='hidden' name='attr_rollstreetcredthree' value="&{template:roll} {{name=@{character_name} }} {{trait=^{Street Cred}}} {{skill_rank=@{streetcredthree} }} {{skill_roll=[[1@{streetcredthree}! + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{streetcredthreewilddie}! @{smooth_dice}dF]]}}" />
+							</div>
         					<!-- Money -->
 							<input type="checkbox" class="sheet-usewealth" name="attr_usewealth" style="display: none;" />
         					<input type="checkbox" class="sheet-useLankhmar" name="attr_50fPo8Clams" value="3" style="display: none;"/>
@@ -8297,7 +8297,17 @@
     			        <!--Status--><label class="sheet-dsItem" data-i18n-title="status-text" title="A reflection of ones position in society, and the esteem with which others regard the hero. This is used in Rippers."><input type="checkbox" class="sheet-useStatus" name="attr_ripStatus" style="width: 15px;" /><span data-i18n="status">Status</span></label>
     			        <!--Strain IZ 2.0--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
 						<!--Street Cred IZ 2.0--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
-    			        <!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
+						<!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
+						<div class="sheet-srmItem sheet-showstreetcredthreewilddie">
+                            <select name="attr_streetcredthreewilddie" title="@{streetcredthreewilddie}" class="sheet-traitdie">
+                                <option value="4">d4</option>
+                                <option value="6" selected>d6</option>
+                                <option value="8">d8</option>
+                                <option value="10">d10</option>
+                                <option value="12">d12</option>
+                            </select>
+                            <input type='text' class='sheet-ModDesc' name='attr_streetcredthreewilddieinfo' data-i18n="street-cred-three-wild-die-type" />
+                        </div>
     			    </div>
     			</div>
     			<div class='sheet-configSection'>
