--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6228,9 +6228,9 @@
         						</div>
 							</div>
 							<!-- IZ 3.0 Street Cred -->
-							<input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px; display: none;" name="attr_izStreetCredThree" />
+							<input type="checkbox" class="sheet-useStreetCredThree" style="display: none;" name="attr_izStreetCredThree" />
 							<div class="sheet-basederived sheet-StreetCredThree">
-    					        <div class="sheet-derivelabel" data-i18n="street-cred">Street Cred</div>
+    					        <div class="sheet-derivelabel"><button class="sheet-traitbutton sheet-deriveflexbutton" type='roll' name='roll_StreetCredThreeRoll' value="@{attr_rollstreetcredthree}" data-i18n="street-cred">&nbsp;Street Cred</button></div>
     					        <div class="sheet-derivebase">
     					            <select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-derivebaseplus" value="d6">
     									<option value="d4">d4</option>
