--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6230,19 +6230,18 @@
 							<!-- IZ 3.0 Street Cred -->
 							<input type="checkbox" class="sheet-useStreetCredThree" style="display: none;" name="attr_izStreetCredThree" />
 							<div class="sheet-basederived sheet-StreetCredThree">
-    					        <div class="sheet-derivelabel"><button class="sheet-traitbutton sheet-deriveflexbutton" type='roll' name='roll_StreetCredThreeRoll' value="@{attr_rollstreetcredthree}" data-i18n="street-cred">&nbsp;Street Cred</button></div>
-    					        <div class="sheet-derivebase">
+    					        <div class="sheet-derivelabel"><button class="sheet-traitbutton sheet-deriveflexbutton" type='roll' name='roll_StreetCredThreeRoll' value="@{rollstreetcredthree}" data-i18n="street-cred">&nbsp;Street Cred</button></div>
+    					        <div class="sheet-derivebaseplus">
     					            <select name="attr_streetcredthree" title="@{StreetCredThree}" class="sheet-derivebaseplus" value="d6">
     									<option value="d4">d4</option>
     									<option value="d6">d6</option>
     									<option value="d8">d8</option>
     									<option value="d10">d10</option>
 										<option value="d12">d12</option>
-										<option value="d12+1">d12+1</option>
-										<option value="d12+2">d12+2</option>
-    								 </select>
+									 </select>
+									 + <input type='number' name='attr_streetcredthreemod' value="0" style="text-align: center;" />
 								</div>
-								<input type='hidden' name='attr_rollstreetcredthree' value="&{template:roll} {{name=@{character_name} }} {{trait=^{Street Cred}}} {{skill_rank=@{streetcredthree} }} {{skill_roll=[[1@{streetcredthree}! + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{streetcredthreewilddie}! @{smooth_dice}dF]]}}" />
+								<input type='hidden' name='attr_rollstreetcredthree' value="&{template:roll} {{name=@{character_name} }} {{trait=^{Street Cred}}} {{skill_rank=@{streetcredthree} }} {{skill_roll=[[1@{streetcredthree}! + @{streetcredthreemod} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{streetcredthreewilddie}! + @{streetcredthreemod} + @{smooth_dice}dF]]}}" />
 							</div>
         					<!-- Money -->
 							<input type="checkbox" class="sheet-usewealth" name="attr_usewealth" style="display: none;" />
