--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6241,7 +6241,7 @@
 									 </select>
 									 + <input type='number' name='attr_streetcredthreemod' value="0" style="text-align: center;" />
 								</div>
-								<input type='hidden' name='attr_rollstreetcredthree' value="&{template:roll} {{name=@{character_name} }} {{trait=^{Street Cred}}} {{skill_rank=@{streetcredthree} }} {{skill_roll=[[1@{streetcredthree}! + @{streetcredthreemod} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{streetcredthreewilddie}! + @{streetcredthreemod} + @{smooth_dice}dF]]}}" />
+								<input type='hidden' name='attr_rollstreetcredthree' value="&{template:roll} {{name=@{character_name} }} {{trait=^{street-cred}}} {{skill_rank=@{streetcredthree} }} {{skill_roll=[[1@{streetcredthree}! + @{streetcredthreemod} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{streetcredthreewilddie}! + @{streetcredthreemod} + @{smooth_dice}dF]]}}" />
 							</div>
         					<!-- Money -->
 							<input type="checkbox" class="sheet-usewealth" name="attr_usewealth" style="display: none;" />
