added intial note setup

--- a/Ironsworn/Ironsworn.html
+++ b/Ironsworn/Ironsworn.html
@@ -983,7 +983,7 @@
     <div>
         <h3 class="sheet-divide">NOTES</h3>
         <br>
-        <textarea></textarea>
+        <textarea name="attr_sheet-notes"></textarea>
     </div>
 </div>
 
@@ -6458,10 +6458,14 @@
 <div class="page5tab">
     <hr>
     <fieldset class="repeating_bonds">
-        <input class="sheet-border-bottom sheet-bond-name" name="attr_bond-name" placeholder="Bond Name">
-        <div>
+        <input type="text" class="sheet-border-bottom sheet-bond-name" name="attr_bond-name" placeholder="Name">
+        <input type= "checkbox" class="sheet-show-bond-info" name="attr_bond-show">
+        <span class="sheet-show-bond-info">More Info</span>
+        <div class="sheet-show-bond-info sheet-hidden-flex">
+            <input class="sheet-bond-location sheet-border-bottom" name="attr_bond-location" placeholder="Location">
+            <input class="sheet-bond-descriptors sheet-border-bottom" name="attr_bond-descriptors" placeholder="Descriptors">
             <h4>Notes:</h4>
-            <textarea></textarea>
+            <textarea class="sheet-bond-notes" name="attr_bond-notes"></textarea>
         </div>
     </fieldset>
 </div>
