--- a/Pokerole 1e/Pokerole.html
+++ b/Pokerole 1e/Pokerole.html
@@ -753,7 +753,7 @@
                                     <span title="">Mod</span>
                                 </span>
                                 <span class="field-labeled sheet-field-readonly"  style="display:inline-block;width:50px">
-                                    <input type="number" name="attr_clash_calc" title="@{clash_calc}" value="@{clash_attribute}+@{fight}+@{clash}" disabled="true"/>
+                                    <input type="number" name="attr_clash_calc" title="@{clash_calc}" value="@{clash_attribute}+@{fight}+@{clash}+@{clash_mod}" disabled="true"/>
                                     <span title="">Value</span>
                                 </span>
                             </span>
