Trying to fix wild die
The display

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -6135,7 +6135,8 @@
     							<div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
     					    <!-- IZ 2.0 Street Cred -->
-    					    <input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
+							<input type="checkbox" class="sheet-useStreetCred" style="width: 15px; display: none;" name="attr_izStreetCred" />
+							<input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" /> <!-- Use strain to make sure the following labels work-->
     					    <div class="sheet-basederived sheet-StreetCred sheet-Strain sheet-StreetCredThree" style='font-weight: bold; font-size: .75em;'> <!-- Strain and Street Cred header field -->
     					        <div class="sheet-derivelabel">&nbsp;</div>
     					        <div class="sheet-derivebase" data-i18n="base">Base</div>
@@ -6151,7 +6152,6 @@
     							<div class="sheet-derivemisc"><input type="number" name="attr_maxStreetCredCur" title="@{maxStreetCredCur}" class="sheet-derivedStat" value="10" /></div>
     					    </div>
     					    <!-- IZ 2.0 and 3.0 Strain -->
-    					    <input type="checkbox" class="sheet-useStrain" style="width: 15px; display: none;" name="attr_izStrain" />
     					    <div class="sheet-basederived sheet-Strain">
     					        <div class="sheet-derivelabel" data-i18n="strain">Strain</div>
     					        <div class="sheet-derivebase">
@@ -8296,7 +8296,7 @@
     			        <!--Status--><label class="sheet-dsItem" data-i18n-title="status-text" title="A reflection of ones position in society, and the esteem with which others regard the hero. This is used in Rippers."><input type="checkbox" class="sheet-useStatus" name="attr_ripStatus" style="width: 15px;" /><span data-i18n="status">Status</span></label>
     			        <!--Strain IZ 2.0--><label class="sheet-dsItem" data-i18n-title="strain-text" title="Used to measure how much strain a character is under due to augmentation from bioware. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStrain" style="width: 15px;" name="attr_izStrain" /><span data-i18n="strain">Strain</span></label>
 						<!--Street Cred IZ 2.0--><label class="sheet-dsItem" data-i18n-title="street-cred-text" title="Used to measure a character's reputation on the streets. Base = 2 per Character Rank. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCred" /><span data-i18n="street-cred">Street Cred</span></label>
-						<!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCred" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
+						<!--Street Cred IZ 3.0--><label class="sheet-dsItem" data-i18n-title="street-cred-three-text" title="Used to measure a character's general reputation and credibility. This field is a die to work with Interface Zero 3.0"><input type="checkbox" class="sheet-useStreetCredThree" style="width: 15px;" name="attr_izStreetCredThree" /><span data-i18n="street-cred">Street Cred</span></label>
 						<div class="sheet-srmItem sheet-showstreetcredthreewilddie">
                             <select name="attr_streetcredthreewilddie" title="@{streetcredthreewilddie}" class="sheet-traitdie">
                                 <option value="4">d4</option>
@@ -8476,7 +8476,8 @@
 						 <li><strong data-i18n="sheet-enhancements">Functionality Enhancements</strong></li>
 						 <ul>
 							 <li data--i18n="smooth-dice-fix">Added option for dice smoothing, adding 1dF to every roll. This specifically fixes the probability quirk where d4-2 was more likely to succeed against TN 4 than d6-2.</li>
-						 </ul>
+							 <li data--i18n="IZ30patch">Added support for Interface Zero 3.0 with toggleable augmentations and a new Street Cred</li>
+						</ul>
 					</ul>
 				 </div>
                 <!-- Release 3.9 -->
